# teison-ha

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  hacs.json  pyproject.toml  requirements_test.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml  test.yml  validate.yml
brands/: README.md
custom_components/teison/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  manifest.json  number.py  sensor.py  strings.json  switch.py
custom_components/teison/translations/: de.json  en.json  es.json  fr.json  hr.json  it.json  nb.json  nl.json  pl.json  pt.json  sr.json  sv.json  uk.json
tests/: __init__.py  conftest.py  const.py  test_api.py  test_binary_sensor.py  test_config_flow.py  test_coordinator.py  test_energy.py  test_init.py  test_number.py  test_repairs.py  test_sensor.py  test_switch.py
