[project]
name = "teison-ha"
version = "0.1.0"
description = "Home Assistant custom integration for Teison Mini EV chargers"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["custom_components", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "PL",   # pylint
    "RUF",  # ruff-specific
]
ignore = [
    "PLR2004",  # magic-value-comparison (status codes read clearly inline)
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
known-first-party = ["custom_components.teison"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
